--- a/.github/workflows/main_job-app-backend.yml
+++ b/.github/workflows/main_job-app-backend.yml
@@ -25,26 +25,26 @@ jobs:
       - name: Create and start virtual environment
         run: |
           cd djob_backend
-          python -m env env
-          source env/bin/activate
+          python -m venv venv
+          source venv/bin/activate
       
       - name: Install dependencies
         run: |
-        cd djob_backend
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
+          cd djob_backend
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
 
       - name: Collect statil files
       run: |
-        cd djob_backend
-        python manage.py collectstatic --noinput
+          cd djob_backend
+          python manage.py collectstatic --noinput
         
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
 
       - name: Zip artifact for deployment
         run: | 
-        cd djob_backend
-        zip release.zip ./* -r
+          cd djob_backend
+          zip release.zip ./* -r
 
       - name: Upload artifact for deployment jobs
         uses: actions/upload-artifact@v4
