--- a/.github/workflows/main_job-app-backend.yml
+++ b/.github/workflows/main_job-app-backend.yml
@@ -25,8 +25,8 @@ jobs:
       - name: Create and start virtual environment
         run: |
           cd djob_backend
-          python -m env env
-          source env/bin/activate
+          python -m venv venv
+          source venv/bin/activate
       
       - name: Install dependencies
         run: |
