changed yml file

--- a/.github/workflows/main_job-app-backend.yml
+++ b/.github/workflows/main_job-app-backend.yml
@@ -34,10 +34,11 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Collect statil files
+      - name: Collect static files
         run: |
           cd djob_backend
           python manage.py collectstatic --noinput
+          
         
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
 
